# tap-coda

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tap-coda.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  test.yml  update_catalog.yml
scripts/: update_openapi.py
tap_coda/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_coda/openapi/: __init__.py  openapi.json
tests/: __init__.py  conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[columns].json  test_catalog_changes[controls].json  test_catalog_changes[docs].json  test_catalog_changes[formulas].json  test_catalog_changes[pages].json  test_catalog_changes[permissions].json  test_catalog_changes[rows].json  test_catalog_changes[tables].json
