[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tap-coda"
version = "0.0.1"
description = "Singer tap for Coda, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "ELT",
    "Coda",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"
singer-sdk = "~=0.40.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
singer-sdk = {version = "*", extras = ["testing"]}
types-requests = "*"

[tool.poetry.scripts]
# CLI declaration
tap-coda = 'tap_coda.tap:TapCoda.cli'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
src = ["tap_coda"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "ANN101",  # missing-type-self
  "DJ",      # flake8-django
  "FIX002",  # line-contains-todo
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_coda"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"
