[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap-coda"
version = "0.0.1"
description = "Singer tap for Coda, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
    "ELT",
    "Coda",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "singer-sdk~=0.49.0",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
]

[project.scripts]
tap-coda = "tap_coda.tap:TapCoda.cli"

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
]
testing = [
    "singer-sdk[testing]",
]
typing = [
    { include-group = "testing" },
    "mypy>=1.11.1",
    "types-requests",
]

[tool.mypy]
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
src = ["tap_coda"]

[tool.ruff.lint]
ignore = [
  "DJ",      # flake8-django
  "FIX002",  # line-contains-todo
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_coda"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
min_version = "4.22"
requires = [
    "tox>=4.22",
    "tox-uv",
]
env_list = [
    "typing",
    "py314",
    "py313",
    "py312",
    "py311",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "GITHUB_*",
    "TAP_CODA_*",
]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_coda", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_coda", "tests" ], extend = true } ],
]
